clusters/talos-cluster/traefik/default-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

      # roy@theossaibrothers.com:$apr1$6nphbz19$f39dKtX9Htz0ypW47igk6.
      # cm95QHRoZW9zc2FpYnJvdGhlcnMuY29tOiRhcHIxJDZucGhiejE5JGYzOWRLdFg5SHR6MHlwVzQ3aWdrNi4=
