clusters/talos-cluster/traefik/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "traefik.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api@internal
          port: 9000
